objects/Partner_Pop_up_Ad__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pop_up_Content__c</fullName>
        <inlineHelpText>HTML tags are okay. Please use inline styling for CSS.</inlineHelpText>
        <label>Pop-up Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Show_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Show Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Partner Pop-up Ad</label>
    <nameField>
        <label>Partner Pop-up Ad Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Pop-up Ads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>